# docs/swagger.json
@@ -230,7 +230,7 @@
                     "application/x-json-stream"
                 ],
                 "tags": [
-                    "[系统内部]系统"
+                    "[系统内部]角色"
                 ],
                 "summary": "[系统内部]用户操作鉴权",
                 "operationId": "AuthPermission",
@@ -282,7 +282,7 @@
                     "application/x-json-stream"
                 ],
                 "tags": [
-                    "[系统内部]系统"
+                    "[系统内部]角色"
                 ],
                 "summary": "[系统内部]获取指定用户全部权限",
                 "operationId": "GetPermission",
@@ -586,10 +586,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/sys.RolePermission"
-                            }
+                            "$ref": "#/definitions/sys.RolePermission"
                         }
                     }
                 ],
@@ -638,10 +635,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/sys.RolePermission"
-                            }
+                            "$ref": "#/definitions/sys.RolePermission"
                         }
                     }
                 ],
@@ -1129,10 +1123,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/sys.SystemPermission"
-                            }
+                            "$ref": "#/definitions/sys.SystemPermission"
                         }
                     }
                 ],
@@ -1181,10 +1172,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/sys.SystemPermission"
-                            }
+                            "$ref": "#/definitions/sys.SystemPermission"
                         }
                     }
                 ],
@@ -1413,6 +1401,10 @@
                     "description": "过期时间",
                     "type": "string"
                 },
+                "success": {
+                    "description": "请求是否成功",
+                    "type": "boolean"
+                },
                 "token": {
                     "description": "token",
                     "type": "string"
@@ -1421,9 +1413,22 @@
         },
         "sys.RolePermission": {
             "type": "object",
+            "required": [
+                "action",
+                "eft",
+                "obj",
+                "obj1",
+                "obj2"
+            ],
             "properties": {
                 "action": {
                     "type": "string"
+                },
+                "eft": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "obj": {
                     "type": "string"
@@ -1432,6 +1437,9 @@
                     "type": "string"
                 },
                 "obj2": {
+                    "type": "string"
+                },
+                "role": {
                     "type": "string"
                 }
             }
@@ -1459,7 +1467,7 @@
                 },
                 "Status": {
                     "description": "角色状态(正常/禁用, 默认正常)",
-                    "type": "boolean"
+                    "type": "integer"
                 },
                 "createdAt": {
                     "type": "string"
@@ -1523,6 +1531,10 @@
             "type": "object",
             "required": [
                 "absolutePath",
+                "absolutePath1",
+                "absolutePath2",
+                "appId",
+                "eft",
                 "httpMethod"
             ],
             "properties": {
@@ -1530,9 +1542,28 @@
                     "description": "路由地址",
                     "type": "string"
                 },
+                "absolutePath1": {
+                    "description": "路由地址",
+                    "type": "string"
+                },
+                "absolutePath2": {
+                    "description": "路由地址",
+                    "type": "string"
+                },
+                "appId": {
+                    "description": "AppId",
+                    "type": "string"
+                },
+                "eft": {
+                    "description": "动作",
+                    "type": "string"
+                },
                 "httpMethod": {
                     "description": "HTTP方法",
                     "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         }
