# models/sys/sys_role.go
@@ -13,14 +13,17 @@ type SysRole struct {
 	Name     string `gorm:"column:Name;uniqueIndex;comment:角色名称" json:"Name" binding:"required"   rql:"filter,sort,column=Name"`                   // 角色名称
 	Keyword  string `gorm:"column:Keyword;comment:角色关键词" json:"Keyword" rql:"filter,sort,column=Keyword"`                                          // 角色关键词
 	Desc     string `gorm:"column:Desc;comment:角色说明" json:"Desc" rql:"filter,sort,column=Desc"`                                                    // 角色说明
-	Status   *bool  `gorm:"column:Status;index;type:tinyint(1);default:1;comment:角色状态(正常/禁用, 默认正常)" json:"Status" rql:"filter,sort,column=Status"` // 角色状态(正常/禁用, 默认正常)
+	Status   int    `gorm:"column:Status;index;type:tinyint(1);default:1;comment:角色状态(正常/禁用, 默认正常)" json:"Status" rql:"filter,sort,column=Status"` // 角色状态(正常/禁用, 默认正常)
 	Operator string `gorm:"column:Operator;comment:操作人" json:"Operator"`
 }
 type RolePermission struct {
-	Obj    string
-	Obj1   string
-	Obj2   string
-	Action string
+	ID     int
+	Role   string
+	Obj    string `validate:"required"`
+	Obj1   string `validate:"required"`
+	Obj2   string `validate:"required"`
+	Action string `validate:"required"`
+	Eft    string `validate:"required"`
 }
 
 func InitSysRole() {
